--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
+    "react-github-calendar": "^4.1.6",
+    "react-icons": "^5.2.1",
+    "react-parallax-tilt": "^1.7.229",
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
