--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,38 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Mohit Vishwakarma",
+  "short_name": "Mohit Vishwakarma",
+  "theme_color": "#2d1950",
+  "background_color": "#2d1950",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
+
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./favicon_io/maskable_icon.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "./favicon_io/favicon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "./favicon_io/favicon-256",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "./favicon_io/favicon-384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "./favicon_io/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
